2024-05-24  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLrm): add argument 'tag.replace',
        which is used when replacing tags like '<something>'
        and '</something>'; default is "", which matches the
        current behaviour.

2024-05-21  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (toText.character): add method,
        which handles named atomic character vectors

2024-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.4-1

        * NAMESPACE: register default method for 'toHTML'

2024-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.4-0

2024-03-22  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (toHTML.data.frame): add argument
        "replace.NA", for automatically replacing NAs;
        NAs are noted /before/ any handlers are called

2024-03-18  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLrm): remove <style> and
        <script> content

        * inst/tinytest/test_HTMLrm.R: add tests

2024-03-12  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLrm): add function, which removes
        HTML tags

2024-01-31  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (.ASCII.control.rx): add but do not
        export regex for non-printable control characters
        in ASCII

2023-07-27  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (toHTML.data.frame): add
        argument 'td.id', with default FALSE

2023-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-2

2022-10-24  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-1

        * R/char_refs.R: move "&NonBreakingSpace;" behind
        "&nbsp;" and "nbsp&", since the latter seem
        more-widely supported

2022-09-06  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-0
